# staticjinja

./: .buildinfo  .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST  Makefile  README.md  README.rst  api.html  build.py  genindex.html  index.html  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_staticjinja.py  tox.ini
.github/: codecov.yml
.github/workflows/: build.yml  publish.yml  setup.yml  tag.yml  test.yml
.github/workflows/setup/: action.yml
_sources/: index.rst.txt
_sources/user/: advanced.rst.txt
dev/: authors.html  changelog.html  contributing.html
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  quickstart.rst
docs/dev/: changelog.rst  todo.rst
docs/user/: advanced.rst  install.rst  quickstart.rst
example/: build.py
example/templates/: index.html
examples/: README.rst
examples/makefile/: README.rst
examples/makefile/after/: Makefile  build.sh
examples/makefile/after/templates/: _base.html  about.html
examples/makefile/before/templates/: index.html
examples/markdown/: README.rst  build.py
examples/markdown/after/: build.py  build.sh
examples/markdown/after/src/: _post.html
examples/markdown/after/src/posts/: post2.md
examples/markdown/before/src/posts/: post1.md
examples/markdown/build-EXPECTED/posts/: post1.html  post2.html
examples/minimal-python/: README.rst
examples/minimal-python/after/: build.py  index.html
examples/minimal-python/before/: build.py
examples/simple/: README.rst
examples/simple/before/: build.sh
examples/simple/before/templates/: index.html
src/staticjinja/: __init__.py  __main__.py  _easywatch.py  cli.py  reloader.py  staticjinja.py  types.py
staticjinja/: __init__.py  __main__.py  _easywatch.py  builder.py  cli.py  dep_graph.py  easywatch.py  reloader.py  sources.py  staticjinja.py  types.py  typing.py  version.py
templates/: _base.html
tests/: conftest.py  test_builder.py  test_cli.py  test_dep_graph.py  test_examples.py  test_functional.py  test_main.py  test_meta.py  test_reloader.py  test_sources.py  test_staticjinja.py
tests/build_check/: index.html  knights.html
tests/example/: _base.html  _posts.html  index.html  knights.html
tests/example/data/: knights
tests/example/posts/2015/: foo.html
tests/subclass/: index.html  perl.html
tests/subclass/partials/: include.html
tests/subclass_check/: index.html  perl.html
tests/watch_check/: index.html  knights.html  new_file.html
tests/watch_check/posts/2016/: bar.html
tmp/templates/: inside  src  sym_to_outside_dir
user/: advanced.html  quickstart.html
