[tool.poetry]
name = "staticjinja"
version = "4.1.2" # This needs to match what is in the source code.
description = "jinja based static site generator"
authors = [
    "Ceasar Bautista <cbautista2010@gmail.com>",
]
maintainers = [
    "Nick Crews <nicholas.b.crews@gmail.com>",
]
license = "MIT"

readme = "README.rst"

homepage = "https://github.com/staticjinja/staticjinja"
repository = "https://github.com/staticjinja/staticjinja"
documentation = "https://staticjinja.readthedocs.io"

keywords = ["jinja", "static", "website"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.6.2"
docopt-ng = "^0.7.2"
easywatch = "^0.0.5"
jinja2 = ">=2.10.1, < 4"

# Dev dependencies
black = { version = "^21.12b0", optional = true }
flake8 = { version = "^3.8.4", optional = true }
markdown = { version = "^3.3.3", optional = true }
pytest = { version = "^6.0.0", optional = true }
pytest-check = { version = "^1.0.1", optional = true }
pytest-cov = { version = "^2.5", optional = true }
sphinx = { version = "^4.1.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.1", optional = true }
tomlkit = { version = "^0.5.8", optional = true }
tox = { version = "^3.0.0", optional = true }
twine = { version = "^3.3.0", optional = true }

[tool.poetry.extras]
dev = [
    "black",
    "flake8",
    "markdown",
    "pytest",
    "pytest-check",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "tomlkit",
    "tox",
    "twine",
]

[tool.poetry.scripts]
staticjinja = "staticjinja.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"