[wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules --ignore setup.py --basetemp=.pytest
testpaths = tests

# Settings for running test coverage, used by pytest coverage plugin
# (in the `pytest-cov` package)
[coverage:run]
# Measure branch coverage in addition to statement coverage.
branch = True
# Measure coverage in the staticjinja directory/package
source = staticjinja

# When `coverage html` is run, where the report html is placed.
[coverage:html]
directory = .htmlcov

[flake8]
filename =
    setup.py,
    staticjinja,
    tests,

[metadata]
license-file = LICENSE
